--- a/Lobby/.classpath
+++ b/Lobby/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="D:/jocs/generic/kryonet-2.21/jars/debug/onejar/kryonet-2.21-all.jar"/>
+	<classpathentry kind="lib" path="D:/jocs/generic/sqlite/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
